# simbiosys-greenhouse-robot

./: .gitignore  LICENSE  MERGE_PLAN.md  README.md  colcon_defaults.yaml  frames_2026-05-09_18.39.38.gv  map1.pgm  map1.yaml  map_1778604705.yaml  mirte_map.pgm  mirte_map.yaml  pixi.toml  repos.repos  save_frame.py  save_frame_wrist.py  test_april.py  test_bug_detection.py  test_flower_detection.py
bags/nav_debug_20260520_122435/: metadata.yaml  nav_debug_20260520_122435_0.db3
bags/nav_debug_20260520_122930/: metadata.yaml
docs/: MIRTE_MASTER_CONNECTION(2).md  README.md  arm_control.md  behavior_api_examples.md  behavior_design_notes.md  behavior_sequences_simbiosys.md  localization_debug_tuning.md  mapping.md  robot_connection.md  setup.md  simulation.md  slam_debug_tuning.md  strafing.md  team_workflow.md  topic_reference.md
maps/: mirte_map.pgm  mirte_map.yaml  mirte_map_REAL.pgm  mirte_map_REAL.yaml  mirte_map_annotations.json  mirte_map_sim.yaml
src/simbiosys_arm/: package.xml  setup.cfg  setup.py
src/simbiosys_arm/launch/: moveit_sim.launch.py
src/simbiosys_arm/simbiosys_arm/: arm_motion_node.py  flower_pick_node.py  gripper_client_node.py  gripper_pose_node.py  joint_state_monitor_node.py  moveit_joint_state_adapter_node.py  named_joint_pose_node.py  wrist_camera_position_node.py
src/simbiosys_base/: package.xml  setup.cfg  setup.py
src/simbiosys_base/simbiosys_base/: path_execution_node.py  path_generation_node.py
src/simbiosys_behavior/: package.xml  setup.cfg  setup.py
src/simbiosys_behavior/simbiosys_behavior/: bed_side_controller_node.py  bin_strafe_action_node.py  demo_checkpoint_mission_node.py  mission_manager_node.py  operator_led_node.py  scan_pose_controller_node.py  simple_mission_manager_node.py  state_machine.py  states.py
src/simbiosys_behavior/test/: test_demo_checkpoint_mission.py  test_scan_mission_helpers.py  test_simple_mission_manager.py
src/simbiosys_bringup/: package.xml  setup.cfg  setup.py
src/simbiosys_bringup/config/: real_robot_topics.yaml
src/simbiosys_bringup/launch/: arm_test.launch.py  demo_checkpoint_mission.launch.py  laptop_system.launch.py  mapping_system.launch.py  mission_system.launch.py  perception_only.launch.py  simple_mission_system.launch.py  simulation_mirte_master.launch.py  teleop_system.launch.py  ui_only.launch.py  ui_system.launch.py
src/simbiosys_bringup/simbiosys_bringup/: launch_utils.py  wait_for_checkpoint_ready.py
src/simbiosys_final_approach_controller/: CMakeLists.txt  package.xml  plugins.xml
src/simbiosys_final_approach_controller/include/simbiosys_final_approach_controller/: final_approach_controller.hpp  resettable_progress_checker.hpp
src/simbiosys_final_approach_controller/src/: final_approach_controller.cpp  resettable_progress_checker.cpp
src/simbiosys_interfaces/: CMakeLists.txt  package.xml
src/simbiosys_interfaces/action/: AnalyzePlantScan.action  ExecuteArmMotion.action  ExecuteBedSideScan.action  ExecuteBehavior.action  ExecuteBinStrafe.action  ExecuteScanPosition.action  MoveToTarget.action
src/simbiosys_interfaces/msg/: BedObservation.msg  BedRectangle.msg  BedSideAlignment.msg  BehaviorType.msg  BinWallAlignment.msg  CurrentMission.msg  DetectedTag.msg  FlowerData.msg  FlowerTarget.msg  HarvestStatus.msg  MapMetadata.msg  MappingStatus.msg  NavigationStatus.msg  PlantAnalysis.msg  PlantHealth.msg  ScanPosition.msg  ScanProgress.msg  TaskStatus.msg
src/simbiosys_interfaces/srv/: CleanupMap.srv  DeleteBedRectangle.srv  GetHarvestEnabled.srv  LoadMapMetadata.srv  SaveMapWithMetadata.srv  SendNamedArmPose.srv  SetHarvestEnabled.srv  SetScanPositions.srv  UpsertBedRectangle.srv
src/simbiosys_mapping/: INTEGRATION_README.md  README.md  UI_INTERFACE_README.md  package.xml  setup.cfg  setup.py
src/simbiosys_mapping/behavior_trees/: nav2_tight_space_backup_bt_deadband.xml
src/simbiosys_mapping/config/: amcl_localization.yaml  nav2_navigation.yaml  slam_toolbox_mapping.yaml
src/simbiosys_mapping/launch/: checkpoint_navigation.launch.py  getmap.launch.py  localization.launch.py  map_annotation.launch.py  map_post_processing.launch.py  navigation.launch.py
src/simbiosys_mapping/rviz/: getmap.rviz  localization.rviz  map_annotation.rviz  navigation.rviz
src/simbiosys_mapping/simbiosys_mapping/: checkpoint_navigator_node.py  getmap_node.py  initial_pose_node.py  map_annotation_node.py  map_post_processor_node.py  mapping_status_node.py
src/simbiosys_mapping/test/: test_checkpoint_navigator_status.py
src/simbiosys_mapping/worlds/: greenhouse_8_beds.world  static_obstacles.world
src/simbiosys_perception/: package.xml  setup.cfg  setup.py
src/simbiosys_perception/simbiosys_perception/: alignment_strafe_test_node.py  apriltag_detection_node.py  bed_side_alignment_node.py  bin_wall_alignment_node.py  bin_wall_fit.py  bug_detection_node.py  flower_detection_node.py  flower_detection_node_hsv_backup.py  obstacle_detection_node.py  plant_analysis_node.py  sequential_alignment_strafe_test_node.py  surface_fit.py
src/simbiosys_perception/test/: test_bin_wall_fit.py  test_flower_analysis_helpers.py  test_surface_fit.py
src/simbiosys_ui/: README.md  package.xml  setup.cfg  setup.py
src/simbiosys_ui/docs/: discovered_ros_topics.md  manual_ui_tests.md  mapping_workflow.md  network_access.md  suggested_mapping_interfaces.md  suggested_non_ui_changes.md  ui_ros_connection.md  ui_topic_contract.md
src/simbiosys_ui/simbiosys_ui/: dummy_dashboard_data_node.py  teleop_interface_node.py  ui_node.py
src/simbiosys_ui/simbiosys_ui/config/: rosTopics.json
src/simbiosys_ui/test/: test_flower_records.py
tools/test_publishers/: README.md  mapping_schema_comparison.md  ui_test_data_publisher.py
