<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simbiosys_bringup</name>
  <version>0.0.0</version>
  <description>Laptop-side launch files for SimBioSys team packages.</description>
  <maintainer email="group06@example.com">SimBioSys Group 06</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>simbiosys_arm</exec_depend>
  <exec_depend>simbiosys_base</exec_depend>
  <exec_depend>simbiosys_behavior</exec_depend>
  <exec_depend>simbiosys_perception</exec_depend>
  <exec_depend>simbiosys_mapping</exec_depend>
  <exec_depend>simbiosys_ui</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
